Fix double scroll issue in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,6 @@ body {
   scroll-behavior: smooth;
 }
 
-body > div {
-  overflow-x: hidden;
-}
 li {
   cursor: pointer;
 }
